# deep-agent

./: .env.example  .gitignore  CHANGELOG.md  CHAT_README.md  CONTRIBUTING.md  LICENSE  README.md  chat.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: architecture.md
docs/sessions/: SESSION_SUMMARY.md  WORKING_WITH_AI.md  session_2025-12-28_browser_tools_fix.md  session_2025-12-28_composite_backend.md  session_2025-12-28_planning_execution_config.md  session_2025-12-28_semantic_search_tool.md
scripts/: run_tests.sh  test_agent.py  test_web_tools.py
src/deep_agent/: __init__.py
src/deep_agent/config/: __init__.py  constants.py  models.py  settings.py
src/deep_agent/core/: __init__.py  agent.py  exceptions.py  middleware.py
src/deep_agent/storage/: __init__.py  base.py  chroma.py  composite.py
src/deep_agent/tools/: __init__.py  base.py  browser.py  registry.py  scraper.py  semantic_search.py
src/deep_agent/utils/: __init__.py  logging.py
tests/: conftest.py
tests/test_config/: test_composite_backend.py  test_model_configuration.py  test_settings.py
tests/test_core/: test_agent.py
tests/test_integration/: test_semantic_search_with_agent.py  test_tools_with_agent.py
tests/test_storage/: test_chroma.py
tests/test_tools/: __init__.py  test_semantic_search.py
